@@ -71,7 +71,7 @@ LIB_COMPOJOOM_CUSTOM_FIELDS_FIELD_TYPE_DESC="Select what kind of control this fi
 LIB_COMPOJOOM_CUSTOM_FIELDS_OPTIONS_LABEL="Options"
 LIB_COMPOJOOM_CUSTOM_FIELDS_OPTIONS_DESC="For text and password boxes enter the placeholder text to be shown in the field. For checkbox fields this is ignored. For everything else, use the convention VALUE=LABEL with one value/label pair per line."
 LIB_COMPOJOOM_CUSTOM_FIELDS_DEFAULT_LABEL="Default"
-LIB_COMPOJOOM_CUSTOM_FIELDS_DEFAULT_DESC="Enter the default value for the custom field. For checkboxes you can enter one of 1/0, ON/OFF, or TRUE/FALSE to select between on and off state respectively."
+LIB_COMPOJOOM_CUSTOM_FIELDS_DEFAULT_DESC="Enter the default value for the custom field. For checkboxes you can enter 1 or 0 to select between on and off state respectively(checked/unchecked per default)."
 LIB_COMPOJOOM_CUSTOM_FIELDS_ALLOW_EMPTY_LABEL="Allow empty"
 LIB_COMPOJOOM_CUSTOM_FIELDS_ALLOW_EMPTY_DESC="When it's not checked the field validation is enabled and the user will not be able to submit the entry unless he fills this field."
 LIB_COMPOJOOM_CUSTOM_FIELDS_VALID_LABEL_LABEL="Valid Field Label"
