@@ -1,5 +1,6 @@
 Changelog
 
+# changes to the way checkboxes work
 # get correct avatars using EasySocials queries
 # wrong query for easysocial avatars
 + added a checkbox custom field
